# experience-engine

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPO_DEEP_MAP.md  demo.tape  demo.yml  docker-compose.yml  eslint.config.js  package.json  server.js
.claude/: settings.local.json
.experience/: README.md  activity-watch.js  backfill-why-scope.js  exp-bootstrap.sh  exp-client-drain.js  exp-feedback  exp-feedback.js  exp-health-last  exp-open-pane  exp-pane-bottom  exp-pane-left  exp-pane-right  exp-shell-init.sh  exp-watch  experience-core.js  extract-compact.js  health-check.sh  interceptor-post.js  interceptor-prompt.js  interceptor.js  judge-worker.js  remote-client.js  setup-thin-client.sh  setup.ps1  setup.sh  stop-extractor.js  sync-install.sh  test-bootstrap.js  test-condition-scoring.js  test-context.js  test-detect-mistakes.js  test-evolve-principles.js  test-exp-feedback.js  test-extract-quality.js  test-health-check.js  test-hook-payloads.js  test-hook.js  test-judge-worker.js  test-model-router.js  test-project-noise.js  (+8 more)
docs/: openapi.yaml
scripts/: config-encrypt.js  deploy-vps.sh  generate-changelog.js  health-watch.sh
sdk/python/: pyproject.toml  test_client.py
sdk/python/muonroi_experience/: __init__.py  client.py
tests/: embedding.test.js  experience-core-evolution.test.js  experience-core-routing.test.js  experience-core-task-routing.test.js  experience-suite.test.js  interceptor.test.js  npm-cli.test.js  qdrant-io.test.js  server-auth-runtime.test.js  (+3 more)
(+56 files in other folders)
