[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muonroi-experience"
version = "0.1.0"
description = "Python SDK for Muonroi Experience Engine — AI agents that learn from mistakes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "muonroi"}]
keywords = ["ai", "experience", "memory", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/muonroi/experience-engine"
Repository = "https://github.com/muonroi/experience-engine"

[tool.setuptools.packages.find]
include = ["muonroi_experience*"]
